--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,6 +11,7 @@ before:
     - rm -rf dist
     - go mod download
     - go test ./...
+    - python make_script.py > vetr-collector.sh
 builds:
   -
     id: collector
@@ -28,6 +29,7 @@ archives:
     files:
       - README.md
       - LICENSE
+      - vetr-collector.sh
     name_template: "vetr-collector_{{ .Version }}_{{ .Os }}"
     replacements:
       darwin: MacOS
