--- a/reqs.yaml
+++ b/reqs.yaml
@@ -6,70 +6,146 @@
 - class: "topSystem"    # Devices
 - class: "eqptBoard"    # APIC hardware
 - class: "fabricNode"   # Switch hardware
-- class: "fabricSetupP" # Pods (fabric setup policy)
+# - class: "fabricSetupP" # Pods (fabric setup policy)
 
 ############################################################
 # Fabric-wide settings
 ############################################################
-- class: "epLoopProtectP"    # EP loop protection policy
-- class: "epControlP"        # Rogue EP control policy
-- class: "epIpAgingP"        # IP aging policy
-- class: "infraSetPol"       # Fabric-wide settings
-- class: "infraPortTrackPol" # Port tracking policy
-- class: "coopPol"           # COOP group policy
+# - class: "epLoopProtectP"    # EP loop protection policy
+# - class: "epControlP"        # Rogue EP control policy
+# - class: "epIpAgingP"        # IP aging policy
+# - class: "infraSetPol"       # Fabric-wide settings
+# - class: "infraPortTrackPol" # Port tracking policy
 
 ############################################################
 # Tenants
 ############################################################
-# Primary constructs
-- class: "fvAEPg"   # EPG
-- class: "fvRsBd"   # EPG --> BD
-- class: "fvBD"     # BD
-- class: "fvCtx"    # VRF
-- class: "fvTenant" # Tenant
-- class: "fvSubnet" # Subnet
+# # Primary constructs
+# - class: "fvAEPg"   # EPG
+# - class: "fvRsBd"   # EPG --> BD
+# - class: "fvBD"     # BD
+# - class: "fvCtx"    # VRF
+# - class: "fvTenant" # Tenant
+# - class: "fvSubnet" # Subnet
 
-# Contracts
-- class: "vzBrCP"          # Contract
-- class: "vzFilter"        # Filter
-- class: "vzSubj"          # Subject
-- class: "vzRsSubjFiltAtt" # Subject --> filter
-- class: "fvRsProv"        # EPG --> contract provided
-- class: "fvRsCons"        # EPG --> contract consumed
+# # Contracts
+# - class: "vzBrCP"          # Contract
+# - class: "vzFilter"        # Filter
+# - class: "vzSubj"          # Subject
+# - class: "vzRsSubjFiltAtt" # Subject --> filter
+# - class: "fvRsProv"        # EPG --> contract provided
+# - class: "fvRsCons"        # EPG --> contract consumed
 
-# L3outs
-- class: "l3extOut"            # L3out
-- class: "l3extLNodeP"         # L3 node profile
-- class: "l3extRsNodeL3OutAtt" # Node profile --> Node
-- class: "l3extLIfP"           # L3 interface profile
-- class: "l3extInstP"          # External EPG
+# # L3outs
+# - class: "l3extOut"            # L3out
+# - class: "l3extLNodeP"         # L3 node profile
+# - class: "l3extRsNodeL3OutAtt" # Node profile --> Node
+# - class: "l3extLIfP"           # L3 interface profile
+# - class: "l3extInstP"          # External EPG
 
 ############################################################
 # Fabric Policies
 ############################################################
-- class: "isisDomPol"         # ISIS policy
-- class: "bgpRRNodePEp"       # BGP route reflector nodes
-- class: "l3IfPol"            # L3 interface policy
-- class: "fabricNodeControl"  # node control (Dom netflowetc)
-- class: "fabricRsNodeCtrl"   # node policy group --> node control
-- class: "fabricRsLeNodePGrp" # leaf --> leaf node policy group
-- class: "fabricNodeBlk"      # Node block
+- class: "ctrlrInst"
+  filter: "imdata"
+  query:  
+    rsp-subtree: "full"
+    rsp-prop-include: "config-only"
+
+- class: "fabricInst"
+  filter: "imdata"
+  query:  
+    rsp-subtree: "full"
+    rsp-prop-include: "config-only"
+
+- class: "infraInfra"
+  filter: "imdata"
+  query:  
+    rsp-subtree: "full"
+    rsp-prop-include: "config-only"
+
+- class: "fvTenant"
+  filter: "imdata"
+  query:  
+    rsp-subtree: "full"
+    rsp-prop-include: "config-only"
+# Pod
+# - class: "fabricFuncP"     # Fabric policy group
+# - class: "fabricPodP"      # Fabric pod profile
+# - class: "fabricRsPodPGrp" # Fabric pod profile --> policy group
+# - class: "fabricPodS"      # Fabric pod selector
+
+  # Pod policies
+# - class: "fabricRsTimePol"        # Time
+# - class: "datetimePol"
+
+# - class: "fabricRsPodGrpIsisDomP" # ISIS
+# - class: "isisDomPol"
+
+# - class: "fabricRsPodPGrpCoopP"   # COOP
+# - class: "coopPol"
+
+# - class: "fabricRsPodPGrpBGPRRP"  # Route reflector
+# - class: "fabricRsCommPol"        # Mgmt access
+# - class: "fabricRsSnmpPol"        # SNMP
+
+  # Pod policy
+# - class: "bgpRRNodePEp" # BGP route reflector nodes
+
+  # Node policies
+# - class: "fabicLeNodePGrp"    # Leaf policy group
+# - class: "fabricLeafP"        # Leaf profile
+# - class: "fabricRsLeNodePGrp" # Leaf profile --> policy group
+# - class: "fabicSpNodePGrp"    # Spine policy group
+# - class: "fabricSpineP"       # Spine profile
+# - class: "fabricRsSpNodePGrp" # Spine profile --> policy group
+# - class: "fabricNodeBlk"      # Node block (spine and leaf)
+
+  # Node policy group --> Policy relationships
+# - class: "fabricRsNodeCtrl" # Node control
+
+  # Node policies 
+# - class: "l3IfPol"            # L3 interface policy
+# - class: "fabricNodeControl"  # node control (DOM, netflow, etc)
+
+
 
 ############################################################
-# Fabric Access
+# Access Policies
 ############################################################
-# MCP
-- class: "mcpIfPol"          # MCP inteface policy
-- class: "infraRsMcpIfPol"   # MCP pol --> policy group
-- class: "infraRsAccBaseGrp" # policy group --> host port selector
-- class: "infraRsAccPortP"   # int profile --> node profile
-- class: "mcpInstPol" # MCP global policy
+# Node
+# - class: "infraNodeBlk"    # Node block
+# - class: "infraLeafS"      # Leaf selector
+# - class: "infraNodeP"      # Node profile
+# - class: "infraRsAccPortP" # Node profile --> Interface Profile
+
+# Interface
+# - class: "infraAccPortP"     # Interface profile
+# - class: "infraHPortS"       # Host port selector
+# - class: "infraPortBlk"      # Port block
+# - class: "infraRsAccBaseGrp" # Host port selector --> Interface policy group
+
+# Interface policy
+# - class: "infraAccBndlGrp" # VPC interface policy group
+# - class: "infraAccPortGrp" # Interface policy group
+# - class: "infraRsAttEntP"  # Interface policy group --> AEP
+
+# - class: "infraRsMcpIfPol" # MCP inteface policy
+# - class: "mcpIfPol"
 
 # AEP/domain/VLANs
-- class: "infraAttEntityP" # AEP
-- class: "infraRsDomP"     # AEP --> domain
-- class: "infraRsVlanNs"   # Domain --> VLAN pool
-- class: "fvnsEncapBlk"    # VLAN encap block
+# - class: "infraAttEntityP" # AEP
+# - class: "infraRsDomP"     # AEP --> domain
+# - class: "physDomP"        # Physical domain
+# - class: "vmmDomP"         # VMM domain
+# - class: "l3ExtDomP"       # L3 domain
+# - class: "infraRsVlanNs"   # Domain --> VLAN pool
+# - class: "fvnsVlanInstP"   # VLAN pool
+# - class: "fvnsEncapBlk"    # VLAN encap block
+
+# Global
+# - class: "mcpInstPol" # MCP global instance policy
+
 
 ############################################################
 # Admin/Operations
@@ -98,7 +174,6 @@
   query:
     rsp-subtree-include: "count"
 
-
 # L4-L7 container count
 - class:  "vnsCDev"
   prefix: "vnsCDev.count"
@@ -106,14 +181,12 @@
   query:
     rsp-subtree-include: "count"
 
-
 # L4-L7 service graph count
 - class:  "vnsGraphInst"
   prefix: "vnsGraphInst.count"
   filter: "imdata.#.moCount.attributes"
   query:
     rsp-subtree-include: "count"
-
 
 # MO count by node
 - class: "ctxClassCnt"
@@ -130,7 +203,6 @@
   filter: "imdata.#.healthInst.attributes"
   query:  
     rsp-subtree-include: "health,no-scoped"
-
 
 # Switch capacity
 - class: "eqptcapacityVlanUsage5min"        # VLAN
