--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,6 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
+---
 project_name: vetr-collector
 env_files:
   github_token: ~/.github.com.token
@@ -13,8 +14,7 @@ before:
     - go test ./...
     - python make_script.py
 builds:
-  -
-    id: collector
+  - id: collector
     binary: collector
     goos:
       - windows
@@ -23,14 +23,13 @@ builds:
     goarch:
       - amd64
 archives:
-  -
-    id: collector
+  - id: collector
     format: zip
     files:
       - README.md
       - LICENSE
       - vetr-collector.sh
-    name_template: "vetr-collector_{{ .Version }}_{{ .Os }}"
+    name_template: 'vetr-collector_{{ .Version }}_{{ .Os }}'
     replacements:
       darwin: MacOS
       windows: Windows
@@ -40,10 +39,10 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: '{{ .Tag }}-next'
 changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
+      - '^docs:'
+      - '^test:'
