--- a/pkg/req/reqs.yaml
+++ b/pkg/req/reqs.yaml
@@ -7,6 +7,7 @@
 - class: epControlP
 - class: epIpAgingP
 - class: epLoopProtectP
+- class: eqptFlash
 - class: eqptcapacityL2RemoteUsage5min
 - class: eqptcapacityL2TotalUsage5min
 - class: eqptcapacityL2Usage5min
