--- a/pkg/req/reqs.yaml
+++ b/pkg/req/reqs.yaml
@@ -9,6 +9,7 @@
 - class: epIpAgingP
 - class: epLoopProtectP
 - class: eqptFlash
+- class: eqptcapacityFSPartition
 - class: eqptcapacityL2RemoteUsage5min
 - class: eqptcapacityL2TotalUsage5min
 - class: eqptcapacityL2Usage5min
