--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,7 +3,7 @@
 ---
 project_name: vetr-collector
 env_files:
-  github_token: ~/.github.com.token
+  github_token: $HOME/.github.com.token
 env:
   - GO111MODULE=on
   - CGO_ENABLED=0
