--- a/pkg/req/reqs.yaml
+++ b/pkg/req/reqs.yaml
@@ -79,7 +79,7 @@
 - class: mcpInstPol
 - class: physDomP
 - class: pkiExportEncryptionKey
-# - class: topSystem
+- class: topSystem
 - class: vmmDomP
 - class: vzBrCP
 - class: vzFilter
@@ -87,18 +87,18 @@
 - class: fvCEp
   query:
     rsp-subtree-include: count
-- class: fvIp
-  query:
-    rsp-subtree-include: count
-- class: vnsCDev
-  query:
-    rsp-subtree-include: count
-- class: vnsGraphInst
-  query:
-    rsp-subtree-include: count
+# - class: fvIp
+#   query:
+#     rsp-subtree-include: count
+# - class: vnsCDev
+#   query:
+#     rsp-subtree-include: count
+# - class: vnsGraphInst
+#   query:
+#     rsp-subtree-include: count
 - class: ctxClassCnt
   query:
     rsp-subtree-class: l2BD,fvEpP,l3Dom
-- class: topSystem
+- class: healthInst
   query:
-    rsp-subtree-include: health
+    query-target-filter: 'wcard(healthInst.dn,"^sys/health$")'
