--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,42 +1,27 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
----
-project_name: vetr-collector
-env:
-  - GO111MODULE=on
-  - CGO_ENABLED=0
+version: 2
+
+env_files:
+  github_token: ~/.config/goreleaser/github_token
+
 before:
   hooks:
     - rm -rf dist
-    - go mod download
-    - go test ./...
+    - go mod tidy
+    - go generate ./...
     - python make_script.py
+
 builds:
   - id: collector
     binary: collector
     main: ./cmd/collector
-    goos:
-      - windows
-      - darwin
-      - linux
-    goarch:
-      - amd64
+    targets:
+      - windows_amd64_v1
+      - linux_amd64_v1
+      - darwin_arm64
+
 archives:
   - id: collector
-    format: zip
+    formats: ["zip"]
     files:
       - README.md
       - LICENSE
-      - vetr-collector.sh
-    name_template: 'vetr-collector_{{ .Version }}_{{ .Os }}'
-
-checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: '{{ .Tag }}-next'
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
