--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   release:
+    if: ${{ github.repository == 'brightpuddle/aci-collector' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,7 +20,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: ">=1.20.0"
+          go-version: ">=1.25.0"
 
       - name: Test
         run: go test -v ./...
